@@ -63,11 +63,10 @@ module.exports = function (http2, agent, { enabled }) {
 
         const traceparent = headers.traceparent || headers['elastic-apm-traceparent']
         const tracestate = headers.tracestate
-        const trans = agent.startTransaction(null, null, {
+        const trans = agent.startTransaction(null, 'request', {
           childOf: traceparent,
           tracestate: tracestate
         })
-        trans.type = 'request'
         // `trans.req` and `trans.res` are fake representations of Node.js's
         // core `http.IncomingMessage` and `http.ServerResponse` objects,
         // sufficient for `parsers.getContextFromRequest()` and
